Adding result arrays to git lfs

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,83 @@ results/z3 filter=lfs diff=lfs merge=lfs -text
 data/z1/sam3_pointscan_60N_fine_sparse_z0.h5 filter=lfs diff=lfs merge=lfs -text
 data/z2/sam3_pointscan_60N_fine_sparse_z0.h5 filter=lfs diff=lfs merge=lfs -text
 data/z3/sam3_pointscan_60N_fine_sparse_z0.h5 filter=lfs diff=lfs merge=lfs -text
+results/z1/gmap_ipf.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/pars.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/refined_npks.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/sample_mask_layer_bottom.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/X_coord_gmap.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/Y_coord_gmap.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/gmap_orig.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/ipf_median_filt_s4.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/refined_ori.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/refined_xypf.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/stress_map_bottom_layer_refined_com_corrected.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/ubi_median_filt_s4.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/xypf_median_filt_s4.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/gmap.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/gmap_xypf.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/refined_ubi_map.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/strain_map_bottom_layer_refined_com_corrected.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/X_orig_coord_gmap.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/XPOS.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/xypf_median_filt_s6.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/gmap_npks.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/refined_ipf.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/strain_map_s4.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/ubi_median_filt_s6.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/gmap_ori.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/ipf_median_filt_s6.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/pks_dict.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/strain_map_s6.npy filter=lfs diff=lfs merge=lfs -text
+results/z1/Y_orig_coord_gmap.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/gmap_npks.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/ipf_median_filt_s6.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/sample_mask_layer_center.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/gmap_xypf.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/refined_npks.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/refined_xypf.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/strain_map_s4.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/strain_map_s6.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/gmap_ori.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/X_coord_gmap.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/xypf_median_filt_s4.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/mis_umap.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/refined_ipf.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/strain_map_central_layer_refined_com_corrected.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/refined_ubi_map_test_strain.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/X_orig_coord_gmap.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/aligned_umap.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/ipf_median_filt_s4.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/XPOS.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/Y_coord_gmap.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/Y_orig_coord_gmap.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/refined_ori.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/ubi_median_filt_s4.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/gmap_ipf.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/gmap_orig.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/pars.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/ubi_median_filt_s6.npy filter=lfs diff=lfs merge=lfs -text
+results/z2/xypf_median_filt_s6.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/Y_coord_gmap.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/ipf_median_filt_s4.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/pks_dict.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/refined_npks.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/refined_ori.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/xypf_median_filt_s4.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/Y_orig_coord_gmap.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/gmap_ipf.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/pars.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/ubi_median_filt_s4.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/X_coord_gmap.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/X_orig_coord_gmap.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/xypf_median_filt_s6.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/gmap_npks.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/refined_ipf.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/refined_xypf.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/strain_map_top_layer_refined_com_corrected.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/ubi_median_filt_s6.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/gmap_orig.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/gmap_ori.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/gmap_xypf.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/ipf_median_filt_s6.npy filter=lfs diff=lfs merge=lfs -text
+results/z3/sample_mask_layer_top.npy filter=lfs diff=lfs merge=lfs -text
